# learningdocker

./: .dockerignore  .gitignore  Dockerfile  Justfile  LICENSE  compose.yaml  pyproject.toml
src/learningDocker/: main.py  script.py
