[project]
name = "learningdocker"
version = "0.0.1"
description = "This is an environment python with uv and docker"
requires-python = ">= 3.14"
readme = "README.md"
license = "MIT"
authors = [{ name = "Miquéias Henderson"}]

dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
]
[dependencies-groups]
dev = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/miqueiashenderson/learningdocker.git"
Documentation = "https://github.com/miqueiashenderson/learningdocker.git"

[project.scripts]
learningDocker = "learningdocker.script:run"

[tool.ruff]
line-length = 88
target-version = "py314"
fix = true
show-fixes = true
indent-width = 2
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["learningdocker"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src", "tests"]
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]
reportMissingTypeStubs = true

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['./src/learningdocker']
